# fcctrdtestcli

./: go.mod  go.sum  main.go
cli01/: .gitignore  go.mod  main.go
cli02/: .gitignore  go.mod  main.go
cli05/: Cargo.toml  README.md  build.rs
cli05/proto/: events.proto  firecracker.proto
cli05/proto/service/fccontrol/: fccontrol.proto
cli05/proto/service/ioproxy/: ioproxy.proto
cli05/src/: main.rs
cli05/src/fc_ctrd/: any.rs  drivemount.rs  empty.rs  events.rs  fccontrol.rs  fccontrol_ttrpc.rs  firecracker.rs  ioproxy.rs  ioproxy_ttrpc.rs  mod.rs  types.rs
cli06/: .gitignore  go.mod  go.sum  main.go
cli06/output/202211221828/: parents.json  spec_chameleon.json  spec_cnn_serving.json  spec_helloworld.json  spec_image_rotate.json  spec_json_serdes.json  spec_lr_serving.json  spec_lr_training.json  spec_matmul_fb.json  spec_pyaes.json  spec_rnn_serving.json  spec_video_processing.json
cli06/output/202212031902/: spec_nginx.json
cli07/: Cargo.toml  README.md  build.rs
cli07/proto/: firecracker.proto
cli07/proto/service/drivemount/: drivemount.proto
cli07/src/: main.rs
cli07/src/fc_ctrd/: any.rs  firecracker.rs  types.rs
cli08/: Cargo.toml  README.md
cli08/proto/: types.proto
cli08/proto/service/fccontrol/: fccontrol.proto
cli08/spec_templates/: nginx:1.25.json
cli08/src/: main.rs
cli08/src/fc_ctrd/: drivemount_ttrpc.rs  fccontrol.rs  fccontrol_ttrpc.rs  ioproxy.rs
cli09/: Cargo.toml  README.md
cli09/proto/: firecracker.proto
cli09/proto/service/fccontrol/: fccontrol.proto
cli09/spec_templates/: nginx:latest.json
cli09/src/: main.rs
cli09/src/fc_ctrd/: drivemount.rs  empty.rs  events.rs  fccontrol.rs  fccontrol_ttrpc.rs  firecracker.rs
