[package]
name = "cli08"
version = "0.1.0"
edition = "2021"
authors = ["Christos Katsakioris <ckatsak@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
protobuf = "3"
const_format = "0.2"
once_cell = "1"
containerd-client = { git = "https://github.com/containerd/rust-extensions" }
tracing = { version = "0.1", features = ["max_level_trace", "release_max_level_warn"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
argh = "0.1"
anyhow = "1"
tonic = "0.9"
prost-types = "0.11"
tokio = { version = "1", features = ["full"] } # fs, net?
ttrpc = { version = "0.7", features = ["async"] }
async-trait = "0.1"
oci-spec = ">=0.5.8"
serde_json = "1"
reqwest = { version = "0.11.18", default-features = false }
humantime = "2"

sha2 = "0.10"
hex = "0.4"

[build-dependencies]
ttrpc-codegen = "0.4"
